Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
None
-
None
Description
Created from MDEV-11483
Assertion triggers sometimes during backup of encrypted empty FULLTEXT index :
161207 11:43:40 [01] Copying .\test\fts_0000000000000014_000000000000001e_index_6.ibd to F:\git\mysql-test\var\tmp\backup\test\fts_0000000000000014_000000000000001e_index_6.ibd
InnoDB: Error: trying to access page number 0 in space 15,
InnoDB: space name test/FTS_0000000000000014_000000000000001e_INDEX_6,
InnoDB: which is outside the tablespace bounds.
InnoDB: Byte offset 0, len 16384, i/o type 10.
InnoDB: If you get this error at mysqld startup, please check that
InnoDB: your my.cnf matches the ibdata files that you have in the
InnoDB: MySQL server.
2016-12-07 11:43:40 194c InnoDB: Assertion failure in thread 6476 in file fil0fil.cc line 6265
It is hard to reproduce in some environments. Following test case shows the crash 95% of runs for me:
https://github.com/MariaDB/server/blob/bb-10.1-wlad-xtrabackup/mysql-test/suite/xtrabackup/xb_fulltext_encrypted.test