MDEV-11502 : Assertion in _fil_io in xtrabackup --backup

disable _fil_io() assertion checking node->size for xtrabackup/backup phase.

node->size is not calculated, and _fil_io is not used
apart from reading first page to get encryption data
We always ensure first page is there.